--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                    position: relative;
                    transform: rotate(186deg);
                    */
-                    animation: xz 3s infinite;
+                    animation: xz 3s 2;
        }
        div#log div a:hover::after {
              position:absolute;
