--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
            //添加hr标签，一条线
            var line_hr="<hr width="+a+"% align=left style='background-color:rgb("+r+","+g+","+b+") ' //>"
           // console.log(rgb);
-           var tag="<br/><a href="+path+" style='text-decoration: none;"+rgb+"' target='view_window' >日志：  "+text+"</a>"+line_hr;
+           var tag="<br/><a href="+path+" style='text-decoration: none;"+rgb+"' target='view_window' >"+text+"</a>"+line_hr;
           // console.error(tag);
           //区分log与issues
            if(tag.indexOf("some_log") > 0){
