--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        	     display:block;
        	     color:skyblue;
        }
-    
+    section#comments{display:none;}
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
