--- a/index.html
+++ b/index.html
@@ -263,10 +263,11 @@
     <!--bgsound src="music/包美圣 - 小茉莉.mp3" loop="3" /-->
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
    
-    <!--audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
-        <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
+    <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
+        <!--source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg"-->
+        <source src="//luoo-mp3.kssws.ks-cdn.com/low/2015/0703_02.mp3" type="audio/mpeg">
     </audio>
-    <span id="mp3_help" >可以用ESC键控制</span-->
+    <span id="mp3_help" >可以用ESC键控制</span>
     
 <h1 style="text-align: center;color: orangered;display:none" >保持冷静，不断向前</h1>
 <div id="switch_jpg">
