--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
     <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <!--source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg"-->
         <source src="//luoo-mp3.kssws.ks-cdn.com/low/2015/0703_02.mp3" type="audio/mpeg">
+        <source src="//luoo-mp3.kssws.ks-cdn.com/low/luoo/emo/0893.mp3" type="audio/mpeg">
+        
     </audio>
     <span id="mp3_help" >可以用ESC键控制</span>
     
