--- a/some_log/5.html
+++ b/some_log/5.html
@@ -1,4 +1,4 @@
-<title>雷锋日记<title>
+<title>雷锋日记</title>
 <img src="//7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/57be0d220fa7f.jpg?imageView2/1/w/640/h/452" >
 <pre>
 今天终于下雨了，干热了这么久了。
